Finalise and document font metrics utility; fix button icon position

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -43,8 +43,9 @@
               <a href="#main-content">Jump to main content</a>
             </span>
             <ul class="p-navigation__links">
-              <li class="p-navigation__link is-selected"><a href="/">Docs</a></li>
-              <li class="p-navigation__link"><a href="https://vanillaframework.io/accessibility">Accessibility</a></li>
+                <li class="p-navigation__link is-selected"><a href="/">Docs</a></li>
+                <li class="p-navigation__link"><a href="/examples">Examples</a></li>
+                <li class="p-navigation__link"><a href="https://vanillaframework.io/accessibility">Accessibility</a></li>
               <li class="p-navigation__link"><a href="https://vanillaframework.io/browser-support">Browser support</a></li>
               <li class="p-navigation__link"><a href="https://vanillaframework.io/coding-standards">Coding standards</a></li>
               <li class="p-navigation__link"><a href="https://vanillaframework.io/contribute">Contribute</a></li>
@@ -128,6 +129,7 @@
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/embedded-media/' %}is-active{% endif %}" href="/utilities/embedded-media/">Embedded media</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/equal-height/' %}is-active{% endif %}" href="/utilities/equal-height/">Equal height</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/floats/' %}is-active{% endif %}" href="/utilities/floats/">Floats</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/font-metrics/' %}is-active{% endif %}" href="/utilities/font-metrics/">Font metrics</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/functions/' %}is-active{% endif %}" href="/utilities/functions/">Functions</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/hide/' %}is-active{% endif %}" href="/utilities/hide/">Hide</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/image-position/' %}is-active{% endif %}" href="/utilities/image-position/">Image position</a></li>
