--- a/scss/_patterns_search-box.scss
+++ b/scss/_patterns_search-box.scss
@@ -17,7 +17,7 @@
     }
 
     & [class*='p-icon'] {
-      top: 0;
+      vertical-align: 0; // reset vertical-align, as icon is aligned to the parent container, not the baseline of the text.
 
       &:only-child {
         margin-left: -#{$sph-inner--small};
