--- a/scss/_utilities_font-metrics.scss
+++ b/scss/_utilities_font-metrics.scss
@@ -1,8 +1,6 @@
 @import 'settings_font';
 
-@mixin vf-u-visualise-baseline {
-  $horisontal-bleed: 2rem;
-
+@mixin vf-u-visualise-baseline($horisontal-bleed: 2rem) {
   .u-visualise-font-metrics {
     position: relative;
 
