Drive by interpolation

--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -179,7 +179,7 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
     box-shadow: none;
     color: $color-dark;
     min-height: map-get($line-heights, default-text);
-    padding-right: $default-icon-size + 2 * $sph-inner--small;
+    padding-right: calc(#{$default-icon-size} + #{2 * $sph-inner--small});
     text-indent: 0.01px;
     text-overflow: '';
 
