--- a/scss/_patterns_icons.scss
+++ b/scss/_patterns_icons.scss
@@ -39,6 +39,7 @@ $color-social-icon-foreground: $color-mid-x-light !default;
   @include vf-p-icon-ubuntu;
   @include vf-p-icon-sizes;
   @include vf-p-icon-in-button;
+  @include vf-p-icon-rss;
 
   %icon {
     @extend %vf-hide-text;
@@ -232,6 +233,10 @@ $color-social-icon-foreground: $color-mid-x-light !default;
 
 @mixin vf-icon-ubuntu($background, $foreground) {
   background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' %3E%3Cg fill-rule='nonzero' fill='none'%3E%3Cpath d='M39.906 20.013c0 10.987-8.905 19.893-19.892 19.893C9.028 39.906.122 31 .122 20.013.122 9.028 9.028.122 20.014.122c10.987 0 19.892 8.905 19.892 19.891z' fill='#{vf-url-friendly-color($background)}'/%3E%3Cpath d='M9.69 20.013a2.558 2.558 0 1 1-5.116 0 2.558 2.558 0 0 1 5.116 0zM24.241 32.45a2.559 2.559 0 0 0 4.43-2.558 2.557 2.557 0 1 0-4.43 2.558zm4.429-22.313a2.557 2.557 0 1 0-4.43-2.556 2.557 2.557 0 0 0 4.43 2.556zm-8.656 2.584a7.292 7.292 0 0 1 7.265 6.648l3.701-.059a10.954 10.954 0 0 0-3.227-7.094 3.591 3.591 0 0 1-3.097-.24A3.592 3.592 0 0 1 22.9 9.41c-.92-.25-1.888-.384-2.886-.384-1.75 0-3.404.41-4.874 1.137l1.801 3.234a7.278 7.278 0 0 1 3.073-.677zm-7.294 7.293a7.283 7.283 0 0 1 3.102-5.967l-1.9-3.177a11.005 11.005 0 0 0-4.533 6.341 3.59 3.59 0 0 1 1.343 2.803 3.592 3.592 0 0 1-1.343 2.804 11.01 11.01 0 0 0 4.532 6.343l1.9-3.177a7.286 7.286 0 0 1-3.1-5.97zm7.294 7.295a7.267 7.267 0 0 1-3.073-.678l-1.8 3.234a10.938 10.938 0 0 0 4.873 1.137c.998 0 1.966-.132 2.886-.383a3.587 3.587 0 0 1 1.756-2.564 3.591 3.591 0 0 1 3.097-.24 10.958 10.958 0 0 0 3.227-7.096l-3.701-.058a7.293 7.293 0 0 1-7.265 6.648z' fill='#{vf-url-friendly-color($foreground)}'/%3E%3C/g%3E%3C/svg%3E");
+}
+
+@mixin vf-icon-rss {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40'%3E%3Cg fill='none'%3E%3Crect width='40' height='40' fill='%23EA7819' rx='5' transform='rotate(180 20 20)'/%3E%3Cpath fill='%23FFF' d='M6.333 20.863c3.414 0 6.624 1.334 9.036 3.76a12.804 12.804 0 013.747 9.097h5.261c0-9.991-8.095-18.119-18.044-18.119v5.262zm.008-9.328c12.169 0 22.07 9.955 22.07 22.191h5.26c0-15.138-12.26-27.452-27.33-27.452v5.261zm7.276 18.516a3.645 3.645 0 11-7.29-.002 3.645 3.645 0 017.29.002z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 @mixin vf-p-icon-anchor {
@@ -575,6 +580,13 @@ $color-social-icon-foreground: $color-mid-x-light !default;
     &:hover {
       @include vf-icon-ubuntu(#e95420, $color-social-icon-foreground);
     }
+  }
+}
+
+@mixin vf-p-icon-rss {
+  .p-icon--rss {
+    @extend %social-icon;
+    @include vf-icon-rss;
   }
 }
 
