--- a/scss/_patterns_notifications.scss
+++ b/scss/_patterns_notifications.scss
@@ -15,7 +15,7 @@
       background-color: transparent;
       background-size: map-get($icon-sizes, default);
       border: 0;
-      margin: $sp-unit * 2 $sph-inner auto auto;
+      margin: #{$sp-unit * 2 - $bar-thickness} $sph-inner auto auto;
       padding: $spv-inner--small;
     }
   }
