--- a/scss/_patterns_table-mobile-card.scss
+++ b/scss/_patterns_table-mobile-card.scss
@@ -2,7 +2,7 @@
 
 @mixin vf-p-table-mobile-card {
   .p-table--mobile-card {
-    // threshold value for $multi; if less, space between cards, and padding on tdable cells are set to zero;
+    // threshold value for $multi; if less, space between cards, and padding on table cells are set to zero;
     $td-threshold: 2;
 
     td::before,
@@ -10,7 +10,7 @@
       @extend %muted-heading;
     }
 
-    @media screen and (max-width: $breakpoint-large) {
+    @media screen and (max-width: $breakpoint-medium) {
       thead {
         display: none;
       }
@@ -22,28 +22,32 @@
       }
 
       tr {
-        border-top: 1px solid $color-mid-light;
+        border: $border;
+        border-radius: $border-radius;
         display: flex;
         flex-wrap: wrap;
-        margin: -1px 0 $spv-outer--small;
-        width: 100%;
+        margin-bottom: $spv-outer--scaleable;
+        overflow: auto; // prevent overflow of child margins
+        padding: 0 $sph-inner--large calc(#{$spv-inner--large} - 1px);
+        width: calc(50% - #{0.5 * map-get($grid-gutter-widths, medium)});
       }
 
       td,
       tbody th {
-        $td-padding-bottom: if($multi > $td-threshold, $spv-nudge-compensation, 0);
-        $td-padding-top: if($multi > $td-threshold, $spv-nudge, 0);
         align-items: flex-start;
         display: flex;
-        flex: 0 1 auto;
+        flex: 0 0 auto;
         flex-direction: column;
         justify-content: left !important;
         margin: 0;
         overflow: visible;
-        padding-bottom: $td-padding-bottom;
-        padding-top: $td-padding-top;
+        padding-bottom: $spv-nudge-compensation;
+        padding-left: calc(50% + #{0.5 * $sph-inner});
+        padding-right: 0;
+        padding-top: $spv-nudge;
+        position: relative;
         text-align: left !important;
-        width: 25%;
+        width: 100%;
 
         &[aria-label] {
           text-align: right;
@@ -51,9 +55,13 @@
           &::before {
             content: attr(aria-label);
             display: block;
-            flex: 0 1 auto;
+            flex: 0 0 auto;
+            left: 0;
             margin-bottom: $spv-inner--small - map-get($nudges, nudge--small);
-            width: 100%;
+            padding-top: $sp-unit - map-get($nudges, nudge--small);
+            position: absolute;
+            text-align: right;
+            width: calc(50% - #{0.5 * $sph-inner});
           }
         }
 
@@ -114,6 +122,12 @@
         + .p-contextual-menu__link {
           margin-top: $sp-x-small;
         }
+      }
+    }
+
+    @media screen and (max-width: $breakpoint-small) {
+      tr {
+        width: 100%;
       }
     }
   }
