add td overflow:hidden to prevent long strings from overflowing

--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -21,6 +21,7 @@
   th {
     @extend %single-border-text-vpadding--scaling;
     font-weight: 300;
+    overflow: hidden;
     padding-left: $sph-inner--small;
     padding-right: $sph-inner--small;
     text-align: left;
