increase gutter between label and value

--- a/scss/_patterns_table-mobile-card.scss
+++ b/scss/_patterns_table-mobile-card.scss
@@ -35,7 +35,7 @@
         min-width: 100%;
         overflow: hidden;
         padding-bottom: $spv-nudge-compensation;
-        padding-left: calc(50%);
+        padding-left: calc(50% + #{0.5 * $sph-inner});
         padding-right: 0;
         padding-top: $spv-nudge;
         position: relative;
@@ -53,7 +53,7 @@
             margin-bottom: $spv-inner--small - map-get($nudges, nudge--small);
             margin-left: -100%;
             padding-top: $sp-unit - map-get($nudges, nudge--small);
-            padding-right: #{0.5 * $sph-inner};
+            padding-right: #{$sph-inner};
             overflow: hidden;
             text-align: right;
             text-overflow: ellipsis;
