increase input maergin bottom by .5rem

--- a/docs/examples/templates/tick-element-comparison.html
+++ b/docs/examples/templates/tick-element-comparison.html
@@ -19,6 +19,10 @@ category: _templates
       <form action="">
         <input type="text">
         <button>Button</button>
+        <button>Button</button>
+        <button>Button</button>
+        <button>Button</button>
+
       </form>
     </div>
     <div class="col-3">
