--- a/scss/_patterns_table-mobile-card.scss
+++ b/scss/_patterns_table-mobile-card.scss
@@ -42,8 +42,7 @@
         text-align: left !important;
         text-overflow: ellipsis;
         width: 100%;
-
-        &[aria-label] {
+        word-break: break-word &[aria-label] {
           text-align: right;
 
           &::before {
@@ -53,8 +52,8 @@
             margin-bottom: $spv-inner--small - map-get($nudges, nudge--small);
             margin-left: -100%;
             overflow: hidden;
-            padding-top: $sp-unit - map-get($nudges, nudge--small);
             padding-right: #{$sph-inner};
+            padding-top: $sp-unit - map-get($nudges, nudge--small);
             text-align: right;
             text-overflow: ellipsis;
             width: 100%;
