--- a/scss/_patterns_table-mobile-card.scss
+++ b/scss/_patterns_table-mobile-card.scss
@@ -42,7 +42,9 @@
         text-align: left !important;
         text-overflow: ellipsis;
         width: 100%;
-        word-break: break-word &[aria-label] {
+        word-break: break-word;
+
+        &[aria-label] {
           text-align: right;
 
           &::before {
