--- a/scss/_patterns_table-mobile-card.scss
+++ b/scss/_patterns_table-mobile-card.scss
@@ -2,12 +2,15 @@
 
 @mixin vf-p-table-mobile-card {
   .p-table--mobile-card {
+    // threshold value for $multi; if less, space between cards, and padding on tdable cells are set to zero;
+    $td-threshold: 2;
+
     td::before,
     tbody th::before {
       @extend %muted-heading;
     }
 
-    @media screen and (max-width: $breakpoint-medium) {
+    @media screen and (max-width: $breakpoint-large) {
       thead {
         display: none;
       }
@@ -19,30 +22,28 @@
       }
 
       tr {
-        border: $border;
-        border-radius: $border-radius;
+        border-top: 1px solid $color-mid-light;
         display: flex;
-        flex-direction: column;
-        margin-bottom: $spv-outer--scaleable;
-        overflow: auto; // prevent overflow of child margins
-        padding: 0 $sph-inner--large calc(#{$spv-inner--large} - 1px);
-        width: calc(50% - #{0.5 * map-get($grid-gutter-widths, medium)});
+        flex-wrap: wrap;
+        margin: -1px 0 $spv-outer--small;
+        width: 100%;
       }
 
       td,
       tbody th {
+        $td-padding-bottom: if($multi > $td-threshold, $spv-nudge-compensation, 0);
+        $td-padding-top: if($multi > $td-threshold, $spv-nudge, 0);
+        align-items: flex-start;
         display: flex;
-        min-width: 100%;
-        overflow: hidden;
-        padding-bottom: $spv-nudge-compensation;
-        padding-left: calc(50% + #{0.5 * $sph-inner});
-        padding-right: 0;
-        padding-top: $spv-nudge;
-        position: relative;
+        flex: 0 1 auto;
+        flex-direction: column;
+        justify-content: left !important;
+        margin: 0;
+        overflow: visible;
+        padding-bottom: $td-padding-bottom;
+        padding-top: $td-padding-top;
         text-align: left !important;
-        text-overflow: ellipsis;
-        width: 100%;
-        word-break: break-word;
+        width: 25%;
 
         &[aria-label] {
           text-align: right;
@@ -50,14 +51,8 @@
           &::before {
             content: attr(aria-label);
             display: block;
-            flex: 0 0 auto;
+            flex: 0 1 auto;
             margin-bottom: $spv-inner--small - map-get($nudges, nudge--small);
-            margin-left: -100%;
-            overflow: hidden;
-            padding-right: #{$sph-inner};
-            padding-top: $sp-unit - map-get($nudges, nudge--small);
-            text-align: right;
-            text-overflow: ellipsis;
             width: 100%;
           }
         }
@@ -119,12 +114,6 @@
         + .p-contextual-menu__link {
           margin-top: $sp-x-small;
         }
-      }
-    }
-
-    @media screen and (max-width: $breakpoint-small) {
-      tr {
-        width: 100%;
       }
     }
   }
